# cs6233-final-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  mmapavx2_r_fscache_cpucache_2GiB_1639663156.csv  mmapavx2_r_fscache_cpucache_2GiB_1639663396.csv  mmapavx_r_fscache_cpucache_2.600000GiB_1639668232.csv
publish/: cs6233_final_project.ipynb  final_report.md
publish/data/: mmapavx2_r_fscache_cpucache_100.0MiB_1639684066.csv  mmapavx2_r_fscache_cpucache_2.0GiB_1639684571.csv  mmapavx2_r_fscache_cpucache_8.0MiB_1639683592.csv  mmapavx2_r_fscache_nocpucache_100.0MiB_1639684175.csv  mmapavx2_r_fscache_nocpucache_2.0GiB_1639685181.csv  mmapavx2_r_fscache_nocpucache_8.0MiB_1639683614.csv  mmapavx2_r_nofscache_cpucache_100.0MiB_1639684342.csv  mmapavx2_r_nofscache_cpucache_2.0GiB_1639685510.csv  mmapavx2_r_nofscache_cpucache_8.0MiB_1639683797.csv  mmapavx2_r_nofscache_nocpucache_100.0MiB_1639684405.csv  mmapavx2_r_nofscache_nocpucache_2.0GiB_1639685710.csv  mmapavx2_r_nofscache_nocpucache_8.0MiB_1639683883.csv  mmapavx_r_fscache_cpucache_100.0MiB_1639682749.csv  mmapavx_r_fscache_cpucache_2.0GiB_1639683114.csv  mmapavx_r_fscache_cpucache_8.0MiB_1639682641.csv  mmapavx_r_fscache_nocpucache_100.0MiB_1639682776.csv  mmapavx_r_fscache_nocpucache_2.0GiB_1639683257.csv  mmapavx_r_fscache_nocpucache_8.0MiB_1639682662.csv  mmapavx_r_nofscache_cpucache_100.0MiB_1639682814.csv  mmapavx_r_nofscache_cpucache_2.0GiB_1639683394.csv  mmapavx_r_nofscache_cpucache_8.0MiB_1639682668.csv  mmapavx_r_nofscache_nocpucache_100.0MiB_1639682922.csv  mmapavx_r_nofscache_nocpucache_2.0GiB_1639683546.csv  mmapavx_r_nofscache_nocpucache_8.0MiB_1639682690.csv  mmapblock_r_fscache_cpucache_100.0MiB_1639681968.csv  mmapblock_r_fscache_cpucache_2.0GiB_1639682199.csv  mmapblock_r_fscache_cpucache_8.0MiB_1639681783.csv  mmapblock_r_fscache_nocpucache_100.0MiB_1639681999.csv  mmapblock_r_fscache_nocpucache_2.0GiB_1639682324.csv  mmapblock_r_fscache_nocpucache_8.0MiB_1639681808.csv  mmapblock_r_nofscache_cpucache_100.0MiB_1639682061.csv  mmapblock_r_nofscache_cpucache_2.0GiB_1639682456.csv  mmapblock_r_nofscache_cpucache_8.0MiB_1639681836.csv  mmapblock_r_nofscache_nocpucache_100.0MiB_1639682091.csv  mmapblock_r_nofscache_nocpucache_2.0GiB_1639682591.csv  mmapblock_r_nofscache_nocpucache_8.0MiB_1639681862.csv  osblock_r_fscache_cpucache_100.0MiB_1639676631.csv  osblock_r_fscache_cpucache_2.0GiB_1639701582.csv  osblock_r_fscache_cpucache_8.0MiB_1639676235.csv  osblock_r_fscache_cpucache_8.0MiB_1639707450.csv  (+19 more)
src/: benchmark.cc  fast.c  read_mmap.c  read_mmapavx.c  read_mmapavx2.c  read_mmapavx512.c  read_mmapblock.c  read_mmapbyte.c  read_osblock.c  read_pmmapblock.c  read_stdioblock.c  run.c  run2.cc  run5.cc  write_mmapblock.c  write_mmapbyte.c  write_osblock.c  write_stdioblock.c
